--- a/proj/proj/proj.vcxproj
+++ b/proj/proj/proj.vcxproj
@@ -19,49 +19,27 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Camera.h" />
-    <ClInclude Include="CameraMaterial.h" />
-    <ClInclude Include="CameraShader.h" />
-    <ClInclude Include="DynamicGameObject.h" />
-    <ClInclude Include="HelperFunctions.h" />
-    <ClInclude Include="Light.h" />
+    <ClInclude Include="AVTmathLib.h" />
+    <ClInclude Include="Car.h" />
+    <ClInclude Include="GameManager.h" />
     <ClInclude Include="Material.h" />
-    <ClInclude Include="MaterialManager.h" />
-    <ClInclude Include="engine.h" />
-    <ClInclude Include="mat.h" />
     <ClInclude Include="Mesh.h" />
-    <ClInclude Include="MeshManager.h" />
-    <ClInclude Include="OrthogonalCamera.h" />
-    <ClInclude Include="PerspectiveCamera.h" />
-    <ClInclude Include="Renderer.h" />
     <ClInclude Include="resource.h" />
-    <ClInclude Include="GameObject.h" />
-    <ClInclude Include="Scene.h" />
-    <ClInclude Include="Shader.h" />
-    <ClInclude Include="ShaderManager.h" />
-    <ClInclude Include="SolidColorMaterial.h" />
-    <ClInclude Include="SolidColorShader.h" />
-    <ClInclude Include="Texture.h" />
-    <ClInclude Include="TextureManager.h" />
-    <ClInclude Include="vec.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="Camera.cpp" />
-    <ClCompile Include="HelperFunctions.cpp" />
-    <ClCompile Include="MaterialManager.cpp" />
-    <ClCompile Include="MeshManager.cpp" />
-    <ClCompile Include="OrthogonalCamera.cpp" />
-    <ClCompile Include="PerspectiveCamera.cpp" />
-    <ClCompile Include="Shader.cpp" />
-    <ClCompile Include="main.cpp" />
-    <ClCompile Include="mat.cpp" />
-    <ClCompile Include="ShaderManager.cpp" />
-    <ClCompile Include="Texture.cpp" />
-    <ClCompile Include="TextureManager.cpp" />
-    <ClCompile Include="vec.cpp" />
+    <ClInclude Include="vec3.h" />
+    <ClInclude Include="vec4.h" />
+    <ClInclude Include="vsShaderLib.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="proj.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="AVTmathLib.cpp" />
+    <ClCompile Include="Car.cpp" />
+    <ClCompile Include="GameManager.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="vec3.cpp" />
+    <ClCompile Include="vec4.cpp" />
+    <ClCompile Include="vsShaderLib.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{5882F5A5-B6D5-4CC8-91C0-EAB1FEAA21FD}</ProjectGuid>
@@ -145,6 +123,7 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <AdditionalIncludeDirectories>$(SolutionDir)..\dependencies\freeglut\include;$(SolutionDir)..\dependencies\glew\include;$(SolutionDir)\..\dependencies\soil\src</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>_CRT_SECURE_NO_DEPRECATE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -176,6 +155,7 @@
       <SDLCheck>true</SDLCheck>
       <AdditionalIncludeDirectories>$(SolutionDir)..\dependencies\freeglut\include;$(SolutionDir)..\dependencies\glew\include;$(SolutionDir)..\dependencies\soil\src</AdditionalIncludeDirectories>
       <WholeProgramOptimization>false</WholeProgramOptimization>
+      <PreprocessorDefinitions>_CRT_SECURE_NO_DEPRECATE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
