--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,17 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+
+!dependencies/*
+!proj/proj/objs/*
+
 # User-specific files
 *.suo
 *.user
 *.userosscache
 *.sln.docstates
+
+
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
