added table textures

--- a/proj/proj/proj.vcxproj
+++ b/proj/proj/proj.vcxproj
@@ -44,6 +44,7 @@
     <ClInclude Include="Shader.h" />
     <ClInclude Include="ShaderManager.h" />
     <ClInclude Include="SpotLight.h" />
+    <ClInclude Include="TGA.h" />
     <ClInclude Include="Track.h" />
     <ClInclude Include="vec2.h" />
     <ClInclude Include="vec3.h" />
@@ -64,6 +65,7 @@
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="Hitbox.cpp" />
     <ClCompile Include="Lamp.cpp" />
+    <ClCompile Include="Light.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MathHelper.cpp" />
     <ClCompile Include="ModelManager.cpp" />
@@ -74,6 +76,7 @@
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="ShaderManager.cpp" />
     <ClCompile Include="SpotLight.cpp" />
+    <ClCompile Include="TGA.cpp" />
     <ClCompile Include="Track.cpp" />
     <ClCompile Include="vec3.cpp" />
     <ClCompile Include="vec4.cpp" />
