pause + restart textures

--- a/proj/proj/proj.vcxproj
+++ b/proj/proj/proj.vcxproj
@@ -34,6 +34,7 @@
     <ClInclude Include="LightShader.h" />
     <ClInclude Include="MathHelper.h" />
     <ClInclude Include="Mesh.h" />
+    <ClInclude Include="MiniCar.h" />
     <ClInclude Include="ModelManager.h" />
     <ClInclude Include="ObjLoader.h" />
     <ClInclude Include="Orange.h" />
@@ -44,6 +45,8 @@
     <ClInclude Include="Shader.h" />
     <ClInclude Include="ShaderManager.h" />
     <ClInclude Include="SpotLight.h" />
+    <ClInclude Include="TextureHolder.h" />
+    <ClInclude Include="TextureShader.h" />
     <ClInclude Include="TGA.h" />
     <ClInclude Include="Track.h" />
     <ClInclude Include="vec2.h" />
