--- a/proj/proj/proj.vcxproj
+++ b/proj/proj/proj.vcxproj
@@ -87,6 +87,7 @@
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="ShaderManager.cpp" />
     <ClCompile Include="SpotLight.cpp" />
+    <ClCompile Include="Sun.cpp" />
     <ClCompile Include="TGA.cpp" />
     <ClCompile Include="Track.cpp" />
     <ClCompile Include="vec3.cpp" />
