--- a/proj/proj/proj.vcxproj
+++ b/proj/proj/proj.vcxproj
@@ -23,6 +23,7 @@
     <ClInclude Include="Billboard.h" />
     <ClInclude Include="Border.h" />
     <ClInclude Include="Butter.h" />
+    <ClInclude Include="Fog.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Car.h" />
     <ClInclude Include="Cheerio.h" />
@@ -80,6 +81,7 @@
     <ClCompile Include="MathHelper.cpp" />
     <ClCompile Include="ModelManager.cpp" />
     <ClCompile Include="Orange.cpp" />
+    <ClCompile Include="Fog.cpp" />
     <ClCompile Include="OrthoCamera.cpp" />
     <ClCompile Include="ParticleSystem.cpp" />
     <ClCompile Include="PerspectiveCamera.cpp" />
